--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
-h1 {
-    color: red;
+/* font awesome link */
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Header part */
+.influncer-part {
+    color: #3A3A3A;
+    font-size: 24px;
+}
+
+.header-tag {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 120px;
+    padding-top: 30px;
+}
+
+.header-tag a {
+    text-decoration: none;
+    padding-left: 34px;
+    color: #3A3A3A;
+    font-size: 16px;
+}
+
+.icon-design {
+    font-size: 16px;
+}
+
+/*------------------ 
+Main Part
+------------------*/
+.container {
+    display: flex;
 }
