--- a/style.css
+++ b/style.css
@@ -34,3 +34,79 @@ Main Part
 .container {
     display: flex;
 }
+
+.half-width {
+    width: 50%;
+    padding-left: 120px;
+    padding-top: 50px;
+}
+
+.journey-part {
+    width: 582px;
+    height: 270px;
+}
+
+.half-width img {
+    width: 440px;
+    height: 414px;
+    padding-left: 376px;
+
+}
+
+.half-width h2 {
+    color: #3A3A3A;
+    font-size: 52px;
+}
+
+.button {
+    background-color: #E02C6D;
+    border: 1px solid white;
+    border-radius: 41px;
+    color: #FFFFFF;
+    font-weight: 700;
+    width: 196px;
+    height: 44px;
+}
+
+.button .fa-arrow-right {
+    color: #FFFFFF;
+}
+
+/* Logo Part  */
+
+.logos {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 2px solid rgb(126, 124, 124);
+    border-bottom: 2px solid rgb(108, 107, 107);
+    width: 1110px;
+    height: 110px;
+    margin-left: 200px;
+}
+
+.logos img {
+    padding-left: 60px;
+}
+
+/* Popular Section  */
+.popular-section {
+    margin-top: 76px;
+}
+
+.popular-section h2 {
+    color: #3A3A3A;
+    font-size: 52px;
+    text-align: center;
+}
+
+.boxes {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+    padding-left: 94px;
+
+
+}
